--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Core dependencies
 numpy==1.24.3
 pandas==2.0.3
 matplotlib==3.7.2
@@ -6,8 +7,20 @@ scikit-learn==1.3.2
 scikit-image==0.21.0
 opencv-python==4.8.0.74
 Pillow==9.5.0
-tensorflow==2.12.0
-keras==2.12.0
+
+# Loosen typing-extensions for FastAPI compatibility
+typing-extensions>=4.8.0
+
+# (Removed fim—no PyPI package available)
+
+# TensorFlow / Keras (CPU-only, skipped on Python ≥3.12)
+tensorflow-cpu==2.12.0 ; python_version<'3.12'
+keras==2.12.0          ; python_version<'3.12'
+
+# Ensure setuptools provides distutils on newer Python
+setuptools>=60.0.0
+
+# Other ML / utility libraries
 eagerpy==0.31.2
 foolbox==4.7.2
 imbalanced-learn==0.11.0
