--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,8 @@
-# Core dependencies
+streamlit==1.23.1
+tensorflow==2.12.0
+keras==2.12.0
 numpy==1.24.3
 pandas==2.0.3
-matplotlib==3.7.2
-scipy==1.10.1
-scikit-learn==1.3.2
-scikit-image==0.21.0
-opencv-python==4.8.0.74
-Pillow==9.5.0
-
-# Loosen typing-extensions for FastAPI compatibility
-typing-extensions>=4.8.0
-
-# (Removed fim—no PyPI package available)
-
-# TensorFlow / Keras (CPU-only, skipped on Python ≥3.12)
-tensorflow-cpu==2.12.0 ; python_version<'3.12'
-keras==2.12.0          ; python_version<'3.12'
-
-# Ensure setuptools provides distutils on newer Python
-setuptools>=60.0.0
-
-# Other ML / utility libraries
-eagerpy==0.31.2
-foolbox==4.7.2
-imbalanced-learn==0.11.0
-ipython==8.14.0
-ipywidgets==8.1.0
-seaborn==0.14.1
-streamlit==1.26.0
-tqdm==4.66.0
+matplotlib==3.7.1
+scikit-learn==1.2.2
+Pillow==9.4.0
